--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
+
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- <link rel="stylesheet/less" type="text/css" href="js/libs/bootstrap/less/bootstrap.less"/> -->
   <link rel="stylesheet" type="text/css" href="js/libs/bootstrap/bootstrap.css">
 
 </head>
-<body>  
-  
+
+<body>
+
   <!-- NavBar -->
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
-        <div class="container-fluid">          
-            <a class="brand" href="./index.html">
-              <strong>Redis Live</strong>
-            </a>
-            <select id="server-list" class="nav pull-right span2 server-list">
-              <option>redis server..</option>                   
-            </select>
-        </div>
+      <div class="container-fluid">
+        <a class="brand" href="./index.html">
+          <strong>Redis Live</strong>
+        </a>
+        <select id="server-list" class="nav pull-right span2 server-list">
+          <option>redis server..</option>
+        </select>
+      </div>
     </div>
   </div>
 
   <!-- Container -->
-  <div class="container-fluid"> 
-    
+  <div class="container-fluid">
+
     <!-- Info Widget -->
-    <div class="row-fluid">        
+    <div class="row-fluid">
       <div id="info-widget-placeholder" class="span12"></div>
     </div>
-    <hr>    
+    <hr>
 
     <!-- memory-widget -->
     <div class="row-fluid" id="memory-widget-placeholder"></div>
     <hr>
 
     <!-- commands-widget -->
-    <div class="row-fluid" id="commands-widget-placeholder"></div>    
+    <div class="row-fluid" id="commands-widget-placeholder"></div>
     <hr>
-    
+
     <!-- top commands-widget AND top keys-widget -->
     <div class="row-fluid">
       <div class="span12">
-         <div class="row-fluid">
-            <!-- top commands widget -->
-            <div class="span6" id="top-commands-widget-placeholder"></div>
-            <!-- top keys widget -->
-            <div class="span6" id="top-keys-widget-placeholder"></div>
-          </div>
+        <div class="row-fluid">
+          <!-- top commands widget -->
+          <div class="span6" id="top-commands-widget-placeholder"></div>
+          <!-- top keys widget -->
+          <div class="span6" id="top-keys-widget-placeholder"></div>
+        </div>
       </div>
     </div>
 
@@ -54,49 +57,49 @@
   <!-- End Container -->
 
 
-  <!-- javascript ==================================================-->  
+  <!-- javascript ==================================================-->
   <script type="text/javascript" src="/js/google/jsapi.js"></script>
   <script type="text/javascript" src="/js/google/visualization.js"></script>
   <link rel="stylesheet" type="text/css" href="js/google/jsapi.css">
   <script type="text/javascript" src="/js/google/chart.js"></script>
 
   <script type="text/javascript" src="js/libs/jquery/jquery-1.7.2.min.js"></script>
-  <script type="text/javascript" src="js/libs/less/less-1.3.0.min.js"></script>  
+  <script type="text/javascript" src="js/libs/less/less-1.3.0.min.js"></script>
 
-  <script type="text/javascript" src="js/libs/bootstrap/js/bootstrap-button.js"></script>  
+  <script type="text/javascript" src="js/libs/bootstrap/js/bootstrap-button.js"></script>
   <script type="text/javascript" src="js/libs/bootstrap/js/bootstrap-tooltip.js"></script>
   <script type="text/javascript" src="js/libs/bootstrap/js/bootstrap-popover.js"></script>
   <script type="text/javascript" src="js/libs/bootstrap/js/bootstrap-dropdown.js"></script>
 
   <script type="text/javascript" src="js/libs/underscore/underscore-min.js"></script>
-  <script type="text/javascript" src="js/libs/backbone/backbone-min.js"></script>  
+  <script type="text/javascript" src="js/libs/backbone/backbone-min.js"></script>
   <script type="text/javascript" src="js/libs/handlebars/handlebars-1.0.0.beta.6.js"></script>
-  
+
   <script type="text/javascript" src="js/views/base-widget-view.js"></script>
 
-  <script type="text/javascript" src="js/models/serverlist-model.js"></script>   
+  <script type="text/javascript" src="js/models/serverlist-model.js"></script>
   <script type="text/javascript" src="js/views/serverlist-view.js"></script>
-  
+
   <script type="text/javascript" src="js/models/info-widget-model.js"></script>
   <script type="text/javascript" src="js/views/info-widget-view.js"></script>
-  
+
   <script type="text/javascript" src="js/models/memory-widget-model.js"></script>
   <script type="text/javascript" src="js/views/memory-widget-view.js"></script>
-  
+
   <script type="text/javascript" src="js/models/commands-widget-model.js"></script>
   <script type="text/javascript" src="js/views/commands-widget-view.js"></script>
 
   <script type="text/javascript" src="js/models/top-commands-widget-model.js"></script>
   <script type="text/javascript" src="js/views/top-commands-widget-view.js"></script>
-  
+
   <script type="text/javascript" src="js/models/top-keys-widget-model.js"></script>
   <script type="text/javascript" src="js/views/top-keys-widget-view.js"></script>
-  
+
   <script type="text/javascript" src="js/app.js"></script>
-  
+
   <script type="text/javascript">
-    google.setOnLoadCallback( function() {
-      $( function() {
+    google.setOnLoadCallback(function () {
+      $(function () {
         App.init()
       })
     })  
@@ -164,7 +167,7 @@
       </div>  
     </div>   
   </script>
-  
+
   <!-- keys tooltip template 
   ================================================== -->
   <script type="text/x-handlebars-template" id="popover-template">
@@ -177,7 +180,7 @@
 
   <!-- info tooltip template 
   ================================================== -->
-   <script type="text/x-handlebars-template" id="info-template">
+  <script type="text/x-handlebars-template" id="info-template">
      <ul>
       {{#hash this}}
         <li>{{key}} : {{value}}</li>
@@ -191,7 +194,7 @@
     <div class="span12">
       <div class="row-fluid">              
         <div class="span4">
-          <h3>Memory Consumption</h3>              
+          <h3>内存消耗</h3>              
         </div>
         <div class="" style="float:right">
           {{> date-dropdown}}                                       
@@ -207,7 +210,7 @@
     <div class="span12">
       <div class="row-fluid">              
         <div class="span4">
-          <h3>Commands Processed</h3>              
+          <h3>处理完成的指令</h3>              
         </div>
         <div class="" style="float:right">
           {{> date-dropdown}}                                       
@@ -222,7 +225,7 @@
   <script type="text/x-handlebars-template" id="top-commands-widget-template">
     <div class="row-fluid">              
       <div class="span6">
-        <h3>Top Commands</h3>                  
+        <h3>热点指令</h3>                  
       </div>      
       <div class="" style="float:right">
         {{> date-dropdown}}                                
@@ -236,14 +239,14 @@
   <script type="text/x-handlebars-template" id="top-keys-widget-template">
     <div class="row-fluid">              
       <div class="span6">
-        <h3>Top Keys</h3>                  
+        <h3>热点Keys</h3>                  
       </div>      
       <div class="" style="float:right">
         {{> date-dropdown}}                                
       </div>      
     </div>
     <div id="top-keys-widget-chart"></div>    
-  </script> 
+  </script>
 
   <!-- Date Drop down template
   ================================================== -->
@@ -251,42 +254,43 @@
     <form class="form-inline" onsubmit="return false;">
       <div class="btn-toolbar" style="">
         <div class="btn-group">
-          <button class="btn btn-small">realtime</button>
+          <button class="btn btn-small">实时</button>
           <button class="btn btn-small dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
           <ul class="dropdown-menu">
-            <li><a href="#" class="time-period" data-type="realtime" data-time="0">realtime</a></li>
+            <li><a href="#" class="time-period" data-type="realtime" data-time="0">实时</a></li>
             <li class="divider"></li>
-            <li><a href="#" class="time-period" data-type="minute" data-time="15">last 15 min</a></li>
-            <li><a href="#" class="time-period" data-type="minute" data-time="30">last 30 min</a></li>
-            <li><a href="#" class="time-period" data-type="minute" data-time="45">last 45 min</a></li>
+            <li><a href="#" class="time-period" data-type="minute" data-time="15">最近 15 分钟</a></li>
+            <li><a href="#" class="time-period" data-type="minute" data-time="30">最近 30 分钟</a></li>
+            <li><a href="#" class="time-period" data-type="minute" data-time="45">最近 45 分钟</a></li>
             <li class="divider"></li>
-            <li><a href="#" class="time-period" data-type="hour" data-time="1">last 1 hour</a></li>
-            <li><a href="#" class="time-period" data-type="hour" data-time="3">last 3 hours</a></li>
-            <li><a href="#" class="time-period" data-type="hour" data-time="12">last 12 hours</a></li>
+            <li><a href="#" class="time-period" data-type="hour" data-time="1">最近 1 小时</a></li>
+            <li><a href="#" class="time-period" data-type="hour" data-time="3">最近 3 小时</a></li>
+            <li><a href="#" class="time-period" data-type="hour" data-time="12">最近 12 小时</a></li>
             <li class="divider"></li>
-            <li><a href="#" class="time-period" data-type="day" data-time="1">last 1 day</a></li>
-            <li><a href="#" class="time-period" data-type="day" data-time="2">last 2 days</a></li>
-            <li><a href="#" class="time-period" data-type="day" data-time="3">last 3 days</a></li>
-            <li><a href="#" class="time-period" data-type="day" data-time="4">last 4 days</a></li>
-            <li><a href="#" class="time-period" data-type="day" data-time="5">last 5 days</a></li>
-            <li><a href="#" class="time-period" data-type="day" data-time="6">last 6 days</a></li>
+            <li><a href="#" class="time-period" data-type="day" data-time="1">最近 1 天</a></li>
+            <li><a href="#" class="time-period" data-type="day" data-time="2">最近 2 天</a></li>
+            <li><a href="#" class="time-period" data-type="day" data-time="3">最近 3 天</a></li>
+            <li><a href="#" class="time-period" data-type="day" data-time="4">最近 4 天</a></li>
+            <li><a href="#" class="time-period" data-type="day" data-time="5">最近 5 天</a></li>
+            <li><a href="#" class="time-period" data-type="day" data-time="6">最近 6 天</a></li>
             <li class="divider"></li>
-            <li><a href="#" class="time-period" data-type="week" data-time="1">last 1 week</a></li>
-            <li><a href="#" class="time-period" data-type="week" data-time="2">last 2 weeks</a></li>
+            <li><a href="#" class="time-period" data-type="week" data-time="1">最近 1 周</a></li>
+            <li><a href="#" class="time-period" data-type="week" data-time="2">最近 2 周</a></li>
             <li class="divider"></li>
-            <li><a href="#" class="time-period" data-type="month" data-time="1">last 1 month</a></li>
+            <li><a href="#" class="time-period" data-type="month" data-time="1">最近 1 月</a></li>
             <li class="divider"></li>
-            <li><a href="#" class="time-period" data-type="custom" data-time="0">custom</a></li>
+            <li><a href="#" class="time-period" data-type="custom" data-time="0">自定义</a></li>
           </ul>
         </div>
         <div class="date-control hide">
           <input type="text" class="input-small" placeholder="from" name="from">
           <input type="text" class="input-small" placeholder="to" name="to">
-          <button type="button" class="btn go" >go</button>
+          <button type="button" class="btn go" >确定</button>
         </div>                   
       </div>
     </form> 
   </script>
 
 </body>
+
 </html>
